move all models

--- a/models/Random_forest.ipynb
+++ b/models/Random_forest.ipynb
@@ -1,40 +1,35 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Random_forest.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU",
-    "gpuClass": "standard"
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# Random Forest"
-      ],
       "metadata": {
         "id": "DfMfm7HulVgV"
-      }
+      },
+      "source": [
+        "# Random Forest"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Loading Packages and Reading Data"
-      ],
       "metadata": {
         "id": "D4P2BSNjlY95"
-      }
+      },
+      "source": [
+        "## Loading Packages and Reading Data"
+      ]
+    },
+    {
+      "cell_type": "raw",
+      "metadata": {},
+      "source": [
+        "---\n",
+        "title: \"Random Forest\"\n",
+        "format: \n",
+        "  html:\n",
+        "    code-fold: true\n",
+        "jupyter: python3\n",
+        "---"
+      ]
     },
     {
       "cell_type": "code",
@@ -60,6 +55,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "id": "iqLIgnLMPJZz"
+      },
+      "outputs": [],
       "source": [
         "# read the dataset\n",
         "df = pd.read_csv('./star_classification 2.csv')\n",
@@ -80,47 +80,32 @@
         "\n",
         "# split the dataset\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.7, random_state=123)"
-      ],
-      "metadata": {
-        "id": "iqLIgnLMPJZz"
-      },
-      "execution_count": 4,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Modeling"
-      ],
       "metadata": {
         "id": "KaIu9FxWqI5I"
-      }
+      },
+      "source": [
+        "## Modeling"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Trial 1\n",
-        "# Trying number of tress 10, 20, 30, ..."
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "CKj7uIPEpXFa"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Trial 1\n",
+        "# Trying number of tress 10, 20, 30, ..."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "n = []\n",
-        "accuracy = []\n",
-        "for i in range(10, 1001, 10):\n",
-        "    clf=RandomForestClassifier(n_estimators=i)\n",
-        "    clf.fit(X_train,y_train)\n",
-        "    y_pred=clf.predict(X_test)\n",
-        "    print(f\"#{i} Accuracy:\",metrics.accuracy_score(y_test, y_pred))\n",
-        "    n.append(i)\n",
-        "    accuracy.append(metrics.accuracy_score(y_test, y_pred))"
-      ],
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -128,11 +113,10 @@
         "id": "ToLWITRqPW_w",
         "outputId": "394cd805-0525-488a-a87c-1970235bc2fa"
       },
-      "execution_count": 10,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "#10 Accuracy: 0.9771333333333333\n",
             "#20 Accuracy: 0.9789\n",
@@ -236,14 +220,22 @@
             "#1000 Accuracy: 0.9793\n"
           ]
         }
+      ],
+      "source": [
+        "n = []\n",
+        "accuracy = []\n",
+        "for i in range(10, 1001, 10):\n",
+        "    clf=RandomForestClassifier(n_estimators=i)\n",
+        "    clf.fit(X_train,y_train)\n",
+        "    y_pred=clf.predict(X_test)\n",
+        "    print(f\"#{i} Accuracy:\",metrics.accuracy_score(y_test, y_pred))\n",
+        "    n.append(i)\n",
+        "    accuracy.append(metrics.accuracy_score(y_test, y_pred))"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "max(accuracy)\n",
-        "# accuracy = 0.9797"
-      ],
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -251,46 +243,54 @@
         "id": "jmdb3OrDPigc",
         "outputId": "a96726ff-6b54-40ce-f36b-d8ba4fc67ec2"
       },
-      "execution_count": 11,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "0.9797"
             ]
           },
+          "execution_count": 11,
           "metadata": {},
-          "execution_count": 11
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "max(accuracy)\n",
+        "# accuracy = 0.9797"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "n.iloc(max(accuracy))\n",
-        "# n = 260 "
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "CQmD9-w_H_kN"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "n.iloc(max(accuracy))\n",
+        "# n = 260 "
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Trial 2\n",
-        "# Using grid search to find the optimal paramerts"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "nhDH2aIspVKv"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Trial 2\n",
+        "# Using grid search to find the optimal paramerts"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {
+        "id": "uZMtr5gDkdhF"
+      },
+      "outputs": [],
       "source": [
         "# Random forest with Grid Search for paramerts tuning\n",
         "rfc = RandomForestClassifier()\n",
@@ -298,19 +298,11 @@
         "    \"n_estimators\":[5,10,50,100,250],\n",
         "    \"max_depth\":[2,4,8,16,32,None]\n",
         "}"
-      ],
-      "metadata": {
-        "id": "uZMtr5gDkdhF"
-      },
-      "execution_count": 21,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "cv = GridSearchCV(rfc, parameters, cv=5)\n",
-        "cv.fit(X_train, y_train)"
-      ],
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -318,10 +310,8 @@
         "id": "TKgvKNrwkoH6",
         "outputId": "59c5307d-30f5-4975-f41c-ba253a30a7f6"
       },
-      "execution_count": 22,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "GridSearchCV(cv=5, estimator=RandomForestClassifier(),\n",
@@ -329,17 +319,19 @@
               "                         'n_estimators': [5, 10, 50, 100, 250]})"
             ]
           },
+          "execution_count": 22,
           "metadata": {},
-          "execution_count": 22
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "cv = GridSearchCV(rfc, parameters, cv=5)\n",
+        "cv.fit(X_train, y_train)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        " # The highest accuracy achieved\n",
-        "print(cv.best_score_)"
-      ],
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -347,23 +339,23 @@
         "id": "dPvZGb4bksgw",
         "outputId": "e3691041-30bf-4b58-fc77-58fd9a96d0e6"
       },
-      "execution_count": 25,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "0.977997852463188\n"
           ]
         }
+      ],
+      "source": [
+        " # The highest accuracy achieved\n",
+        "print(cv.best_score_)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        " # The paramerts that yeild the best score\n",
-        "print(cv.best_params_)"
-      ],
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -371,19 +363,25 @@
         "id": "D_iX9-bek5GE",
         "outputId": "60147fac-9578-4b20-b7a4-71c7e8d8f8c8"
       },
-      "execution_count": 26,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "{'max_depth': None, 'n_estimators': 250}\n"
           ]
         }
+      ],
+      "source": [
+        " # The paramerts that yeild the best score\n",
+        "print(cv.best_params_)"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "xYdBOWftkZL1"
+      },
       "source": [
         "Questions:\n",
         "- What is the best n?\n",
@@ -397,25 +395,27 @@
         "* Highest accuraccy (0.9799) when 250-260 tree and no max depth (20m)\n",
         "* 3h 1-1000 tress w max 0.9797\n",
         "* RF doesnt assume any distribution\n"
-      ],
-      "metadata": {
-        "id": "xYdBOWftkZL1"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Trial 3\n",
-        "# Trying different set of columns"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "X4W-I1buwW9M"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Trial 3\n",
+        "# Trying different set of columns"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 36,
+      "metadata": {
+        "id": "31hZqsHbxes4"
+      },
+      "outputs": [],
       "source": [
         "# read the dataset\n",
         "df = pd.read_csv('./star_classification 2.csv')\n",
@@ -434,15 +434,15 @@
         "\n",
         "# split the dataset\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.7, random_state=123)"
-      ],
-      "metadata": {
-        "id": "31hZqsHbxes4"
-      },
-      "execution_count": 36,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 39,
+      "metadata": {
+        "id": "bwqhAgUEx5ci"
+      },
+      "outputs": [],
       "source": [
         "# Random forest with Grid Search for paramerts tuning\n",
         "rfc = RandomForestClassifier()\n",
@@ -450,19 +450,11 @@
         "    \"n_estimators\":[5,10,50,100,250],\n",
         "    \"max_depth\":[2,4,8,16,32,None]\n",
         "}"
-      ],
-      "metadata": {
-        "id": "bwqhAgUEx5ci"
-      },
-      "execution_count": 39,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "cv = GridSearchCV(rfc, parameters, cv=5)\n",
-        "cv.fit(X_train, y_train)"
-      ],
+      "execution_count": 40,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -470,10 +462,8 @@
         "id": "77O-1RolyTwq",
         "outputId": "2f215f92-9c1e-45af-c2c6-6d310e0cde4d"
       },
-      "execution_count": 40,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "GridSearchCV(cv=5, estimator=RandomForestClassifier(),\n",
@@ -481,17 +471,19 @@
               "                         'n_estimators': [5, 10, 50, 100, 250]})"
             ]
           },
+          "execution_count": 40,
           "metadata": {},
-          "execution_count": 40
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "cv = GridSearchCV(rfc, parameters, cv=5)\n",
+        "cv.fit(X_train, y_train)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        " # The highest accuracy achieved\n",
-        "print(cv.best_score_)"
-      ],
+      "execution_count": 41,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -499,23 +491,23 @@
         "id": "5Oze1lOr0e8P",
         "outputId": "f39eb5a8-4766-402a-951a-964c45deb7de"
       },
-      "execution_count": 41,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "0.9767428571428571\n"
           ]
         }
+      ],
+      "source": [
+        " # The highest accuracy achieved\n",
+        "print(cv.best_score_)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        " # The paramerts that yeild the best score\n",
-        "print(cv.best_params_)"
-      ],
+      "execution_count": 42,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -523,27 +515,46 @@
         "id": "LlgF0taR0hVF",
         "outputId": "af3884f0-68f9-47f0-85ad-adc492147fde"
       },
-      "execution_count": 42,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "{'max_depth': None, 'n_estimators': 100}\n"
           ]
         }
+      ],
+      "source": [
+        " # The paramerts that yeild the best score\n",
+        "print(cv.best_params_)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "MuYVBqw40h2O"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "collapsed_sections": [],
+      "name": "Random_forest.ipynb",
+      "provenance": []
+    },
+    "gpuClass": "standard",
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
