--- a/models/svm-model.ipynb
+++ b/models/svm-model.ipynb
@@ -22,6 +22,19 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"SVM\"\n",
+    "format: \n",
+    "  html:\n",
+    "    code-fold: true\n",
+    "jupyter: python3\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 223,
    "metadata": {},
