--- a/models/LogisticRegression.ipynb
+++ b/models/LogisticRegression.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"LogisticRegression\"\n",
+    "format: \n",
+    "  html:\n",
+    "    code-fold: true\n",
+    "jupyter: python3\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 243,
    "metadata": {},
@@ -1486,7 +1499,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3.10.5 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -1500,12 +1513,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "fb4569285eef3a3450cb62085a5b1e0da4bce0af555edc33dcf29baf3acc1368"
+    "hash": "19d1cd2b929a61e4e44fea3062d888aade8251a4c272377329c883fede26c89a"
    }
   }
  },
