--- a/models/featureEngineering.ipynb
+++ b/models/featureEngineering.ipynb
@@ -1,6 +1,19 @@
 {
    "cells": [
       {
+         "cell_type": "raw",
+         "metadata": {},
+         "source": [
+            "---\n",
+            "title: \"Feature Engineering\"\n",
+            "format: \n",
+            "  html:\n",
+            "    code-fold: true\n",
+            "jupyter: python3\n",
+            "---"
+         ]
+      },
+      {
          "cell_type": "code",
          "execution_count": 16,
          "metadata": {},
